merch alignment correction

--- a/src/components/2022/Merch/Merch.styles.scss
+++ b/src/components/2022/Merch/Merch.styles.scss
@@ -73,15 +73,18 @@ a {
 
         .image {
           width: 300px;
+          height: 383.56px;
           display: flex;
           justify-content: center;
           align-items: center;
           margin-bottom: 10px;
+          border-radius: 8px;
+          border: 3px solid #FC3150;
+          background-color: #f3f3f3;
 
           img {
             width: 100%;
-            border-radius: 8px;
-            border: 2px solid #FC3150;
+            
           }
         }
 
@@ -147,6 +150,7 @@ a {
         .merch-item {
           .image {
             width: 220px;
+            height: 280px;
           }
         }
       }
